Update path images

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <div class="advice-card" id="card">    
       <h3 class="advice-card__title">Advice #{{adviceId}}</h3>
       <p class="advice-card__text">{{generatedText}}</p>
-      <img class="advice-card__divider" src="/images/pattern-divider-desktop.svg" alt="">
+      <img class="advice-card__divider" src="./images/pattern-divider-desktop.svg" alt="">
       <button @click="generateAdvice" class="advice-card__dice-btn">
-        <img src="/images/icon-dice.svg" alt="Get new advice">
+        <img src="./images/icon-dice.svg" alt="Get new advice">
       </button>   
   </div>
 
